service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adiclub-service
spec:
  type: ClusterIP
  selector:
    app: adiclub
  ports:
    - port: 80
      targetPort: 8080
